@@ -1,10 +1,11 @@
 package com.nhnacademy.ruleengine.engine.flow;
 
+import com.nhnacademy.ruleengine.common.exception.invalid.InvalidFlowException;
 import com.nhnacademy.ruleengine.domain.flow.entity.Connection;
 import com.nhnacademy.ruleengine.domain.flow.entity.Flow;
 import com.nhnacademy.ruleengine.domain.flow.entity.Node;
+import com.nhnacademy.ruleengine.domain.flow.enums.BranchType;
 import com.nhnacademy.ruleengine.domain.flowschedule.entity.FlowSchedule;
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
@@ -14,13 +15,32 @@ import java.util.stream.Collectors;
 public class FlowGraphBuilder {
 
     public ExecutableFlow build(
-        Flow flow,
-        List<Node> nodes,
-        List<Connection> connections,
-        List<FlowSchedule> flowSchedules
-    ){
+            Flow flow,
+            List<Node> nodes,
+            List<Connection> connections,
+            List<FlowSchedule> flowSchedules
+    ) {
         Map<Long, ExecutableFlow.ExecutableNode> nodeMap = buildNodeMap(nodes);
-        Map<Long, List<Long>> adjacencyMap = buildAdjacencyMap(connections, nodeMap);
+
+        Map<Long, List<Long>> trueAdjacencyMap = new HashMap<>();
+        Map<Long, List<Long>> falseAdjacencyMap = new HashMap<>();
+
+        nodeMap.keySet().forEach(id -> {
+            trueAdjacencyMap.put(id, new ArrayList<>());
+            falseAdjacencyMap.put(id, new ArrayList<>());
+        });
+
+        for (Connection conn : connections) {
+            Long srcId = conn.getSourceNode().getId();
+            Long tgtId = conn.getTargetNode().getId();
+            BranchType branchType = parseBranchType(conn.getBranchType());
+
+            switch (branchType) {
+                case TRUE -> trueAdjacencyMap.get(srcId).add(tgtId);
+                case FALSE -> falseAdjacencyMap.get(srcId).add(tgtId);
+            }
+        }
+
         Long startNodeId = findStartNodeId(nodeMap, connections);
         List<ExecutableFlow.ExecutableSchedule> executableSchedules = buildSchedules(flowSchedules);
 
@@ -31,12 +51,20 @@ public class FlowGraphBuilder {
                 executableSchedules,
                 startNodeId,
                 nodeMap,
-                adjacencyMap
+                trueAdjacencyMap,
+                falseAdjacencyMap
         );
     }
 
-    //
-    private Map<Long, ExecutableFlow.ExecutableNode> buildNodeMap(List<Node> nodes){
+    private BranchType parseBranchType(String branchType) {
+        try {
+            return BranchType.valueOf(branchType.toUpperCase(Locale.ROOT));
+        } catch (Exception e) {
+            throw new InvalidFlowException();
+        }
+    }
+
+    private Map<Long, ExecutableFlow.ExecutableNode> buildNodeMap(List<Node> nodes) {
         return nodes.stream()
                 .collect(Collectors.toMap(
                         Node::getId,
@@ -50,7 +78,7 @@ public class FlowGraphBuilder {
                 ));
     }
 
-    ////NodeId 별 다음 노드 Id 목록
+    //NodeId 별 다음 노드 Id 목록
     private Map<Long, List<Long>> buildAdjacencyMap(
             List<Connection> connections,
             Map<Long, ExecutableFlow.ExecutableNode> nodeMap
@@ -66,10 +94,8 @@ public class FlowGraphBuilder {
 
         return adjacencyMap;
     }
-    private Long findStartNodeId(
-            Map<Long, ExecutableFlow.ExecutableNode> nodeMap,
-            List<Connection> connections
-    ) {
+
+    private Long findStartNodeId(Map<Long, ExecutableFlow.ExecutableNode> nodeMap, List<Connection> connections) {
         Set<Long> hasIncomingEdge = connections.stream()
                 .map(conn -> conn.getTargetNode().getId())
                 .collect(Collectors.toSet());
@@ -78,11 +104,7 @@ public class FlowGraphBuilder {
                 .filter(id -> !hasIncomingEdge.contains(id))
                 .toList();
 
-        if(startNodes.size() > 1){
-            //TODO 예외처리
-        }
-
-        return startNodes.get(0);
+        return startNodes.isEmpty() ? null : startNodes.getFirst();
     }
 
     private List<ExecutableFlow.ExecutableSchedule> buildSchedules(List<FlowSchedule> schedules) {
@@ -94,5 +116,4 @@ public class FlowGraphBuilder {
                 ))
                 .toList();
     }
-
 }
